deploy/kubernetes/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cinesentiment-mtls
  namespace: cinesentiment
spec:
  mtls:
    mode: PERMISSIVE
